后端实现服务器目录管理，及配置文件初始化
